--- a/install
+++ b/install
@@ -3,3 +3,4 @@ cp ./termhelper /usr/bin/
 cp ./bash-completion/termhelper /etc/bash_completion.d/
 mkdir -p /usr/share/termhelper
 cp -fr ./ru /usr/share/termhelper/
+cp -fr ./locale/* /usr/share/locale/
