--- a/install
+++ b/install
@@ -1,14 +1,24 @@
 #!/bin/bash
+# install executable
 cp ./termhelper /usr/bin/
+
+# install termhelper bash completion config file
 cp ./bash-completion/termhelper /etc/bash_completion.d/
+
+# install help files in ru locale
 mkdir -p /usr/share/termhelper
 cp -fr ./ru /usr/share/termhelper/
 cp -fr ./locale/* /usr/share/locale/
+
+# create soft link (alias) for termhelper in native locale
 echo "Please enter alias (second name) for termhelper"
 echo "It's a good idea to use short name in your native language"
 read alias
 ln -sf /usr/bin/termhelper /usr/local/bin/$alias
+# adding alias name to termhelper completion conf
 sed -i '/complete/s/\(.*\)/\1 '"$alias"'/' /etc/bash_completion.d/termhelper
 cat /etc/bash_completion.d/termhelper
+
+# second way
 #sed '/DIR/!s/termhelper/'"$alias"'/g' /etc/bash_completion.d/termhelper > /etc/bash_completion.d/$alias
 #cat /etc/bash_completion.d/$alias
